@@ -1,6 +1,8 @@
 
 3.45  2012-10-06
+  - Relaxed comment handling in Mojo::DOM::HTML a little. (jberger)
   - Improved documentation.
+  - Improved tests.
 
 3.44  2012-09-29
   - Improved html_escape to favor lower case entities. (judofyr)
